--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,11 @@
     "grunt": "1.0.4",
     "sails": "^1.2.3",
     "sails-hook-autoreload": "^1.1.0",
-    "sails-hook-ddd": "0.0.1",
+    "sails-hook-ddd": "^0.0.1",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
-    "sails-hook-validatorjs": "0.0.1",
+    "sails-hook-validatorjs": "^0.0.1",
     "braces": ">=2.3.1"
   },
   "devDependencies": {
